// 
// Protocol Buffer message types for the sequencer.
// 

syntax = "proto3";
option go_package = "github.com/liamzebedee/goliath-blockchain/sequencer/mvp/sequencer/messages";

// import "google/protobuf/timestamp.proto";

message Block {
  bytes prevBlockHash = 1;
  SequenceTx body = 2;
  bytes sig = 3;
  int64 height = 4;
}

message SequenceTx {
  bytes from = 2;
  bytes data = 3;
  bytes sig = 4;
  bytes nonce = 5;
  repeated ExpiryCondition expires = 20;
}

message ExpiryCondition {  
  oneof condition {
    UNIXExpiryCondition unix = 1;
  }
}

message UNIXExpiryCondition {
  uint64 time = 1;
}

message GetTransactions {
  uint64 from = 1;
  uint64 to = 2;
  repeated SequenceTx txs = 3;
}

message GetSequencerInfo {
  uint64 count = 1;
}


message SequencerPrimaryAdvertisement {
  bytes multiaddress = 1;
}

message P2PMessage {
  Block block = 1;
}